--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
     background-color: black;
     color: white;
 }
+
+.link-item {
+    color: white;
+}
+
+.link-item a:hover {
+    color: whitesmoke;
+}
