--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', "Times New Roman";
+    font-family: "Roboto", "Times New Roman";
     background-color: black;
     color: white;
 }
