--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ body {
     color: white;
 }
 
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
 .link-item {
     color: white;
 }
