--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ h2 {
     text-align: center;
 }
 
+.link-row {
+    background-color: blue;
+}
+
+.link-col {
+    background-color: red;
+}
+
 .link-item {
     color: white;
 }
