--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Roboto", "Times New Roman";
+    font-family: "Courier New", monospace;
     background-color: black;
     color: white;
     text-align: center;
@@ -23,10 +23,13 @@ h2 {
     display: inline-block;
     width: auto;
     height: auto;
+    border-color: white;
+    border-width: 1px;
 }
 
 .link-item a {
     color: white;
+    text-decoration: none;
 }
 
 .link-item a:hover {
