--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Courier New", monospace;
+    font-family: sans-serif, 'Courier New', Courier, monospace;
     background-color: black;
     color: white;
     text-align: center;
@@ -23,15 +23,20 @@ h2 {
     display: inline-block;
     width: auto;
     height: auto;
-    border-color: white;
-    border-width: 1px;
+    border: 1px solid white;
+    padding: 5px 10px;
+    justify-content: center;
+    border-radius: 20px;
 }
 
 .link-item a {
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    align-items: center;
+    display: inline-flex;
 }
 
 .link-item a:hover {
-    color: #EEE;
+    color: #DDD;
 }
