--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h2 {
     display: inline-block;
     width: auto;
     height: auto;
-    border: 0.2px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.2);
     padding: 5px 10px;
     justify-content: center;
     border-radius: 20px;
