--- a/style.css
+++ b/style.css
@@ -27,14 +27,15 @@ h2 {
     display: inline-block;
     width: auto;
     height: auto;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255);
     padding: 5px 10px;
     justify-content: center;
     border-radius: 20px;
 }
 
 .link-col:hover {
-    border-color: white;
+    border-color: black;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .link-item a {
