--- a/style.css
+++ b/style.css
@@ -27,15 +27,15 @@ h2 {
     display: inline-block;
     width: auto;
     height: auto;
-    border: 1px solid rgba(255, 255, 255);
-    padding: 5px 10px;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    padding: 5px 10px 3px;
     justify-content: center;
     border-radius: 20px;
 }
 
 .link-col:hover {
-    border-color: black;
     background-color: rgba(255, 255, 255, 0.2);
+    border-color: black;
 }
 
 .link-item a {
@@ -46,6 +46,6 @@ h2 {
     display: inline-flex;
 }
 
-.link-item a:hover {
-    color: #DDD;
+img {
+    vertical-align: middle;
 }
