--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif, 'Courier New', Courier, monospace;
-    background-color: black;
-    color: white;
+    background-color: rgb(8, 25, 11);
+    color: rgb(204, 224, 206);
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -39,7 +39,7 @@ h2 {
 }
 
 .link-item a {
-    color: white;
+    color: rgb(204, 224, 206);
     text-decoration: none;
     font-size: 18px;
     align-items: center;
