--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+
 body {
     font-family: Montserrat, Helvetica, sans-serif;
     background-color: rgb(8, 25, 11);
@@ -7,6 +15,7 @@ body {
     justify-content: center;
     display: flex;
     min-height: 100vh;
+    height: 100vh;
 }
 
 h1 {
