--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
-    min-height: 100vh;
-    height: 100vh;
+    min-height: 100dvh;
+    height: 100dvh;
 }
 
 h1 {
