--- a/style.css
+++ b/style.css
@@ -21,14 +21,7 @@ body {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
-}
-
-h1 {
-    text-align: center;
-}
-
-h2 {
-    text-align: center;
+    padding-bottom: 20px;
 }
 
 .link-row {
@@ -44,9 +37,12 @@ h2 {
     width: auto;
     height: auto;
     border: 1px solid rgba(255, 255, 255, 0.2);
-    padding: 5px 10px 3px;
+    border-radius: 50%;
     justify-content: center;
-    border-radius: 20px;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-bottom: 1px;
 }
 
 .link-col:hover {
