--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     object-fit: cover;
     object-position: center;
     /* border:1px solid orange; */
+    border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 50%;
 }
 
