--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-    font-family: Montserrat, Helvetica, sans-serif;
+    font-family: "BBH Bartle", "Montserrat", Helvetica, sans-serif;
     background-color: rgb(8, 25, 11);
     color: rgb(230, 255, 230);
     text-align: center;
