--- a/style.css
+++ b/style.css
@@ -51,10 +51,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 50%;
     justify-content: center;
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-left: 5px;
-    padding-bottom: 1px;
+    padding: 5px;
 }
 
 .link-col:hover {
