--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ body {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
+    margin-bottom: 50px;
     /* border: 1px solid yellow; */
 }
 
