--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ body {
     color: rgb(230, 255, 230);
     min-height: 100dvh;
     height: 100dvh;
-    border: 1px solid red
+    /* border: 1px solid red */
 }
 
 .page-container {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -26,7 +26,7 @@ body {
     font-size: 12px;
     margin: 0;
     padding: 0;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
 }
 
@@ -51,7 +51,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding-bottom: 20px;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
 }
 
 .cropped-image {
@@ -70,7 +70,7 @@ body {
     justify-content: center;
     gap: 12px;
     max-width: 80%;
-    border: 1px solid red
+    /* border: 1px solid red */
 }
 
 .link-col {
