--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .title-container {
-    margin-top: 20%;
+    margin-top: 25dvh;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
