--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .page-container {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     text-align: center;
     align-items: center;
     justify-content: center;
