--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -45,12 +46,12 @@ body {
     color: rgba(230, 255, 230, 0.5);
 }
 
-.navbar-item a:visited {
+.navbar-item a:active {
     color: rgb(230, 255, 230);
 }
 
 .title-container {
-    margin-top: 25dvh;
+    margin-top: 20dvh;
     display: inline-flex;
     flex-direction: column;
     align-items: center;
