--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     align-items: center;
     justify-content: center;
     display: flex;
+    height: 95dvh;
 }
 
 .navbar {
@@ -29,6 +30,7 @@ body {
     padding: 0;
     /* border: 1px solid blue; */
     display: flex;
+    height: 5dvh;
 }
 
 .navbar-item {
@@ -55,7 +57,7 @@ body {
 }
 
 .title-container {
-    margin-top: 25dvh;
+    /* margin-top: 25dvh; */
     display: inline-flex;
     flex-direction: column;
     align-items: center;
