--- a/style.css
+++ b/style.css
@@ -114,6 +114,15 @@ img {
 
 p {
     font-family: "Montserrat", Helvetica, sans-serif;
+    font-size: 16px;
+    text-align: center;
+}
+
+.about-container {
+    /* border: 1px solid red; */
+    align-items: center;
+    justify-content: center;
+    width: 75dvw;
 }
 
 
