--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding-bottom: 20px;
-    /* border: 1px solid yellow; */
+    border: 1px solid yellow;
     margin-bottom: 50px
 }
 
@@ -123,6 +123,11 @@ p {
     align-items: center;
     justify-content: center;
     width: 75dvw;
+}
+
+#about-title {
+    padding: 0;
+    margin-top: 0;
 }
 
 
