--- a/style.css
+++ b/style.css
@@ -11,24 +11,28 @@ body {
     color: rgb(230, 255, 230);
     min-height: 100dvh;
     height: 100dvh;
-    /* border: 1px solid red */
+    border: 1px solid red
 }
 
 .page-container {
-    /* border: 1px solid green; */
-    text-align: center;
-    align-items: center;
-    justify-content: center;
     display: flex;
-    height: 95dvh;
+    justify-content: center;
+    align-items: flex-start;
+
+    min-height: calc(100svh - 60px);
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+
+    text-align: center;
 }
+
 
 .navbar {
     list-style-type: none;
     font-size: 12px;
     margin: 0;
     padding: 0;
-    /* border: 1px solid blue; */
+    border: 1px solid blue;
     display: flex;
     height: 5dvh;
 }
@@ -57,27 +61,28 @@ body {
 }
 
 .title-container {
-    /* margin-top: 25dvh; */
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding-bottom: 20px;
-    /* border: 1px solid yellow; */
-    margin-bottom: 50px
+
+    height: calc(100svh - 60px);
+    overflow: hidden;
 }
 
+
 .about-container {
+    width: 100%;
+    max-width: 800px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    width: 100%;
-    max-width: 800px;
-
-    margin-top: 0;
-    margin-bottom: 2rem;
-    padding: 0 1rem 2rem;
+    overflow-y: auto;
+    border: 1px solid white;
 }
+
 
 .cropped-image {
     margin-top: 20px;
