--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     color: rgb(230, 255, 230);
     min-height: 100dvh;
     height: 100dvh;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .page-container {
@@ -19,12 +19,10 @@ body {
     justify-content: center;
     align-items: flex-start;
 
-    min-height: 95dvh;
-    margin: 0;
-    padding: 0;
+    min-height: 90dvh;
 
     text-align: center;
-    border: 1px solid white;
+    /* border: 1px solid white; */
 }
 
 
@@ -33,7 +31,7 @@ body {
     font-size: 12px;
     margin: 0;
     padding: 0;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
     height: 5dvh;
 }
@@ -73,21 +71,20 @@ body {
     overflow: hidden;            /* hide any tiny extra scroll */
     margin: 0;
     padding: 0;
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
 
 
-
 .about-container {
+    margin-top: 10dvw;
     width: 100%;
-    max-width: 800px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
 
     overflow-y: auto;
-    border: 1px solid white;
+    /* border: 1px solid green; */
 }
 
 
